--- a/03_evaluation.ipynb
+++ b/03_evaluation.ipynb
@@ -247,6 +247,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Note the clusters in t-SNE, which are probably related to the regimes observed in Notebook 1. It could be interesting to separate each period to generate better synthetic data. We will not do it here, but it is something worth exploring in the future."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## 3. Metric 2 — Fidelity: Discriminative Score\n",
     "\n",
     "We train a held-out GRU binary classifier to distinguish real from synthetic windows. The test AUC is our discriminative score:\n",
